--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -672,7 +672,7 @@ section.lazy-placeholder:after {
 .cid-s2e01HPRw3 {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-s2e01HPRw3 .mbr-figure {
   margin: 0 auto;
@@ -844,7 +844,7 @@ section.lazy-placeholder:after {
 .cid-rDJnpL7CfR {
   padding-top: 45px;
   padding-bottom: 15px;
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 @media (max-width: 767px) {
   .cid-rDJnpL7CfR {
@@ -912,7 +912,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rDJnS5iXCP {
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-rDJnS5iXCP .mbr-section-title {
   margin: 0;
@@ -961,7 +961,7 @@ section.lazy-placeholder:after {
   margin-bottom: 0;
 }
 .cid-rDJnS5iXCP .team-item .item-caption {
-  background: #f8e5e4;
+  background: #ffeeee;
 }
 .cid-rDJnS5iXCP .builderCard .item-image::after {
   border-bottom-left-radius: 5rem;
@@ -1011,7 +1011,7 @@ section.lazy-placeholder:after {
   color: #132c70;
 }
 .cid-rDJnSyDiLi {
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-rDJnSyDiLi .mbr-section-title {
   margin: 0;
@@ -1060,7 +1060,7 @@ section.lazy-placeholder:after {
   margin-bottom: 0;
 }
 .cid-rDJnSyDiLi .team-item .item-caption {
-  background: #f8e5e4;
+  background: #ffeeee;
 }
 .cid-rDJnSyDiLi .builderCard .item-image::after {
   border-bottom-left-radius: 5rem;
@@ -1110,7 +1110,7 @@ section.lazy-placeholder:after {
   color: #132c70;
 }
 .cid-s2cmI5egXO {
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-s2cmI5egXO .mbr-section-title {
   margin: 0;
@@ -1159,7 +1159,7 @@ section.lazy-placeholder:after {
   margin-bottom: 0;
 }
 .cid-s2cmI5egXO .team-item .item-caption {
-  background: #f8e5e4;
+  background: #ffeeee;
 }
 .cid-s2cmI5egXO .builderCard .item-image::after {
   border-bottom-left-radius: 5rem;
@@ -1265,7 +1265,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s23u0Rbz5n {
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-s23u0Rbz5n .mbr-overlay {
   background-color: #ffffff;
@@ -1275,7 +1275,7 @@ section.lazy-placeholder:after {
   min-height: 150px;
 }
 .cid-s23u0Rbz5n .form-col {
-  background: #f8e5e4;
+  background: #ffeeee;
 }
 .cid-s23u0Rbz5n .form-wrap {
   max-width: 520px;
@@ -1615,7 +1615,7 @@ section.lazy-placeholder:after {
 .cid-rDJo0PyU84 {
   padding-top: 45px;
   padding-bottom: 30px;
-  background-color: #f8e5e4;
+  background-color: #ffeeee;
 }
 .cid-rDJo0PyU84 .mbr-list {
   list-style: none;
